<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/outputFuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/car"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:suffixTextAppearance="@style/TextAppearance1"
                app:suffixText=""
                android:hint="@string/car_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <!--Include button and text with suffix in the same row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/outputFuel1"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="0.3"
            android:drawableStart="@mipmap/fuel_efficiency"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/efficiency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:suffixTextAppearance="@style/TextAppearance1"
            app:suffixText="%"
            android:hint="@string/fuel_efficiency">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Include button and text with suffix in the same row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/outputFuel2"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@null"
            android:drawableStart="@mipmap/kg"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:suffixTextAppearance="@style/TextAppearance1"
            app:suffixText="kg"
            android:hint="@string/car_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Include button and text with suffix in the same row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/outputFuel3"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@null"
            android:drawableStart="@mipmap/drag"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/drug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:suffixTextAppearance="@style/TextAppearance1"
            app:suffixText=""
            android:hint="@string/drag_coefficient">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--Include button and text with suffix in the same row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/outputFuel4"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@null"
            android:drawableStart="@mipmap/frontal"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:suffixTextAppearance="@style/TextAppearance1"
            app:suffixText="m\u00B2"
            android:hint="@string/frontal_area">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <Button
            android:id="@+id/btnAddUser"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/add_car_properties" />

        <Button
            android:id="@+id/btwViewUser"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/view_car_properties" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/outputCar"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:background="@null"
            android:textColor="#000000"
            android:text="@string/select_car" />


        <Spinner
            android:id="@+id/carSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btwDeleteUser"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/delete_car" />

            <Button
                android:id="@+id/button"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/Continue" />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>