<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">


    <!--Scroll bar covering the whole layout so that the content to be visible in any screen-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <!--Include button and spinner in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/outputFuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/fuel"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <Spinner
                android:id="@+id/fuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

         </LinearLayout>

        <!--Include button and spinner in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/outputFriction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/road"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <Spinner
                android:id="@+id/friction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <!--Include button and spinner in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/outputRho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/temperature"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <Spinner
                android:id="@+id/rho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/load_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/load"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:suffixTextAppearance="@style/TextAppearance1"
                app:suffixText="kg"
                android:hint="@string/load">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

            <Button
                android:id="@+id/altitude_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/altitude"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:suffixTextAppearance="@style/TextAppearance1"
                app:suffixText="m"
                android:hint="@string/altitude">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/speed_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/speed"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:suffixTextAppearance="@style/TextAppearance1"
                app:suffixText="km/h"
                android:hint="@string/speed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/distance_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@null"
            android:drawableStart="@mipmap/distance"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:suffixTextAppearance="@style/TextAppearance1"
            app:suffixText="km"
            android:hint="@string/distance">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <!--Include button and text with suffix in the same row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/price_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@null"
                android:drawableStart="@mipmap/price"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:suffixTextAppearance="@style/TextAppearance1"
                app:suffixText="cy/litre"
                android:hint="@string/price">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Fuel"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:text="@string/calculate" />

    </LinearLayout>


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="false"
            android:indeterminate="true"
            android:id="@+id/invActionBarProgressBar"
            android:visibility="gone"
            android:paddingStart="10dp" />

    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>